Actions
Bug #8031
closedlibwrap: variables might be clobbered by longjmp
Start date:
2017-04-04
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
From gcc-6 build:
../rfc931.c: In function 'rfc931': ../rfc931.c:91:13: error: variable 'result' might be clobbered by 'longjmp' or 'vfork' [-Werror=clobbered] char *result = unknown; ^~~~~~ ../rfc931.c:93:14: error: variable 'saved_timeout' might be clobbered by 'longjmp' or 'vfork' [-Werror=clobbered] unsigned saved_timeout = 0; ^~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 5 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a04cabea38af23dd1a0e76c56ca44260af2285e4
commit a04cabea38af23dd1a0e76c56ca44260af2285e4 Author: Toomas Soome <tsoome@me.com> Date: 2017-04-10T14:04:28.000Z 8031 libwrap: variables might be clobbered by longjmp Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Dan McDonald <danmcd@omniti.com>
Actions