8031 libwrap: variables might be clobbered by longjmp Reviewed by: Marcel Telka <marcel@telka.sk> Reviewed by: Yuri Pankov <yuri.pankov@gmail.com> Approved by: Dan McDonald <danmcd@omniti.com>